# Stellaris-Mod-Manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
stellaris_manager/: __init__.py  compatibility.py  data_store.py  first_run.py  main_window.py  models.py  platform_paths.py  settings_dialog.py  workers.py
tests/: test_compatibility.py  test_data_store.py
